ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: bookstack.test.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: bookstack-service
                port:
                  number: 8080
